# final_mlops_project_001

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  conftest.py  docker-compose.yaml  dvc.yaml  mlflow.db  params.yaml  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml
MLOPS_Clothes_project/: __init__.py  config.py  dataset.py  features.py  plots.py
MLOPS_Clothes_project/modeling/: model_eval.py  predict.py  train.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
tests/: test_data.py
